fix: clipped elements in project section

--- a/src/components/expanded/styles.module.scss
+++ b/src/components/expanded/styles.module.scss
@@ -5,7 +5,6 @@
   position: relative;
   border-top: 2px solid global.$dark-disabled-color;
   mix-blend-mode: difference;
-  overflow-y: hidden;
 
   &:last-child {
     border-bottom: 2px solid global.$dark-disabled-color;
