--- a/src/components/home-page/styles.module.scss
+++ b/src/components/home-page/styles.module.scss
@@ -485,3 +485,39 @@
     }
   }
 }
+
+// Devices with smaller height
+@media only screen and (min-height: 600px) and (max-height: 900px) {
+  
+  .heroSectionWrapper {
+    .heroContainer {
+      .heroTextWrapper {
+        .heroText {
+          font-size: 3.75rem;
+        }
+      }
+    }
+  }
+
+  .workSectionWrapper {
+    .workHeading {
+      font-size: 4.5rem;
+    }
+
+    .workSubtext {
+      font-size: 2rem;
+    }
+  }
+
+  .contactSectionWrapper {
+    .contactHeading {
+      font-size: 4.5rem;
+      line-height: 6rem;
+    }
+
+    .introlinkContainer {
+      font-size: 4.5rem;
+      line-height: 5rem;
+    }
+  }
+}
